--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -310,7 +310,7 @@ h6 {
 }
 
 .logo-wrapper {
-    background-color: #e5e8ed;
+    background-color: #bcc1c6;
     text-align: center;
     padding: 40px;
 }
@@ -355,7 +355,7 @@ h6 {
 
 .menu-wrapper a.toggle-menu {
     display: block;
-    background-color: #d8aa46;
+    background-color: #000000;
     color: white;
     text-align: center;
 }
@@ -380,7 +380,7 @@ h6 {
 #prevslide, #nextslide {
     width: 40px;
     height: 40px;
-    background-color: #d8aa46;
+    background-color: #000000;
     color: white;
     opacity: 1 !important;
     cursor: pointer;
