--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -227,7 +227,7 @@ html, body {
 }
 
 body {
-    font: 22px/28px "caveat", Arial, sans-serif;
+    font: 13px/19px "Open Sans", Arial, sans-serif;
     font-weight: 300;
     color: #777777;
     background-color: #4c4c4c;
